added volume files-1

--- a/pod.yaml
+++ b/pod.yaml
@@ -11,4 +11,5 @@ spec:
           name: demovolume
   volumes:
     - name: demovolume
-      persistentVolumeClaim: demo-pvc
+      persistentVolumeClaim:
+        claimName: demo-pvc
